No strptime format (#306)
* skip other channels than the first in spectrodata get_value()

* add default timestamps for BaseDataset.from_folder() with no provided strptime format

* add MP3 files in supported audio extensions

* add BaseDataset.from_folder() tests

* fix overlap test

* sort files alphabetically before parsing them in BaseDataset.from_folder()

* add test for SpectroData.get_value() method with multichannel audio

* set return type of AudioData.get_value() as a 2D array whatever the number of channels

* add multichannel file read tests

* fix SpectroData.end setter

* fix AudioData.link begin timestamp parsing

* edit default spectrogram resolution

* add SpectroData.begin and end tests

* add non-timestamped files doc

* add id audio files

* add ID spectrograms examples to toctree

* add doc notebooks back

--- a/docs/source/example_multiple_spectrograms_id_core.ipynb
+++ b/docs/source/example_multiple_spectrograms_id_core.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "# Computing multiple spectrograms with the Core API [^download]\n",
     "\n",
-    "[^download]: This notebook can be downloaded as **{nb-download}`example_multiple_spectrograms_core.ipynb`**."
+    "[^download]: This notebook can be downloaded as **{nb-download}`example_multiple_spectrograms_id_core.ipynb`**."
    ]
   },
   {
@@ -32,9 +32,11 @@
    "id": "66731c408df9271c",
    "metadata": {},
    "source": [
-    "Create an **OSEkit** `AudioDataset` from the files on disk, by directly specifying the time-related requirements in the constructor.\n",
+    "Create an **OSEkit** `AudioDataset` from the files on disk, by directly specifying the requirements in the constructor.\n",
     "\n",
-    "An `Instrument` can be provided to the `AudioDataset` for the WAV data to be converted in pressure units. This will lead the resulting spectra to be expressed in dB SPL (rather than in dB FS):\n",
+    "Since we don't know (nor we care about) the files begin timestamps, we'll set the `striptime_format` to `None`, which will assign a default timestamp at which the first valid audio file will be considered to start. Then, each next valid audio file will be considered as starting at the end of the previous one. This default timestamp can be editted thanks to the `first_file_begin` parameter.\n",
+    "\n",
+    "An `Instrument` can be provided to the `AudioDataset` for the audio data to be converted in pressure units. This will lead the resulting spectra to be expressed in dB SPL (rather than in dB FS):\n",
     "\n",
     "We will only use the **folder** in which the files are located: we don't have to dig up to the file level."
    ]
@@ -48,21 +50,17 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "audio_folder = Path(r\"_static/sample_audio/timestamped\")\n",
+    "audio_folder = Path(r\"_static/sample_audio/id\")\n",
     "\n",
     "from osekit.core_api.audio_dataset import AudioDataset\n",
     "from osekit.core_api.instrument import Instrument\n",
     "from osekit.utils.audio_utils import Normalization\n",
-    "from pandas import Timestamp, Timedelta\n",
     "\n",
     "audio_dataset = AudioDataset.from_folder(\n",
     "    folder=audio_folder,\n",
-    "    strptime_format=\"%y%m%d_%H%M%S\",\n",
-    "    begin=Timestamp(\"2022-09-25 22:35:15\"),\n",
-    "    end=Timestamp(\"2022-09-25 22:36:25\"),\n",
-    "    data_duration=Timedelta(seconds=5),\n",
-    "    overlap=0.25,\n",
-    "    instrument=Instrument(end_to_end_db=150.0),\n",
+    "    strptime_format=None,\n",
+    "    mode=\"files\",  # Will create one audio data per file. We'll trim them later\n",
+    "    instrument=Instrument(end_to_end_db=165.0),\n",
     "    sample_rate=24_000,\n",
     "    normalization=Normalization.DC_REJECT,\n",
     ")"
@@ -92,52 +90,26 @@
    "cell_type": "markdown",
    "id": "eeafddd2f84557ac",
    "metadata": {},
-   "source": [
-    "We also wanted to **skip** the `AudioData` that are **in the gap between recordings**.\n",
-    "Such `AudioData` have **no linked file**, thus their `is_empty` property should be `True`."
-   ]
+   "source": "We want to trim these audio data so that they all last `8 s`:"
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4387f29b15bd03cb",
+   "id": "ce629441ea840976",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"{' BEFORE FILTERING ':#^60}\")\n",
-    "print(\n",
-    "    f\"{'Nb of Empty data:':<30}{str(len([ad for ad in audio_dataset.data if ad.is_empty])):>30}\\n\"\n",
-    ")\n",
+    "from pandas import Timedelta\n",
     "\n",
-    "# Remove the empty data by using the default AudioDataset constructor:\n",
-    "audio_dataset = AudioDataset([ad for ad in audio_dataset.data if not ad.is_empty])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4e63d5b94f93c8c5",
-   "metadata": {},
-   "source": "The `AudioData` should now only contain **non-empty `AudioData`**:"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56d4365be918a060",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"{' AFTER FILTERING ':#^60}\")\n",
-    "print(f\"{'Nb of audio data:':<30}{str(len(audio_dataset.data)):>30}\")\n",
-    "print(\n",
-    "    f\"{'Nb of Empty data:':<30}{str(len([ad for ad in audio_dataset.data if ad.is_empty])):>30}\\n\"\n",
-    ")"
+    "for ad in audio_dataset.data:\n",
+    "    ad.end = ad.begin + Timedelta(seconds=8)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "ff463689d799a823",
    "metadata": {},
-   "source": "Instantiate a `scipy.signal.ShortTimeFFT` FFT object with the required parameters:"
+   "source": "Now, we instantiate a `scipy.signal.ShortTimeFFT` FFT object with the required parameters:"
   },
   {
    "cell_type": "code",
@@ -162,7 +134,11 @@
    "cell_type": "markdown",
    "id": "946ef52ed70d0642",
    "metadata": {},
-   "source": "Create an **OSEkit** `SpectroDataset` from the `AudioDataset` and the `ShortTimeFFT` objects:"
+   "source": [
+    "Create an **OSEkit** `SpectroDataset` from the `AudioDataset` and the `ShortTimeFFT` objects.\n",
+    "\n",
+    "We'll also rename these spectro data so that the exported files are named after the original audio file names (that are the IDs)."
+   ]
   },
   {
    "cell_type": "code",
@@ -178,7 +154,11 @@
     "    fft=sft,\n",
     "    v_lim=(0.0, 150.0),  # Boundaries of the spectrograms\n",
     "    colormap=\"viridis\",  # Default value\n",
-    ")"
+    ")\n",
+    "\n",
+    "# RENAMING\n",
+    "for sd in spectro_dataset.data:\n",
+    "    sd.name = next(iter(sd.audio_data.files)).path.stem"
    ]
   },
   {
@@ -198,8 +178,9 @@
     "\n",
     "fig, axs = plt.subplots(2, 1)\n",
     "\n",
-    "spectro_dataset.data[2].plot(ax=axs[0])\n",
-    "spectro_dataset.data[3].plot(ax=axs[1])\n",
+    "spectro_dataset.data[0].plot(ax=axs[1])\n",
+    "spectro_dataset.data[1].plot(ax=axs[0])\n",
+    "axs[0].get_xaxis().set_visible(False)\n",
     "plt.show()"
    ]
   },
