--- a/docs/source/example_multiple_spectrograms_id_public.ipynb
+++ b/docs/source/example_multiple_spectrograms_id_public.ipynb
@@ -29,9 +29,9 @@
    "id": "5d67c1697ae837a4",
    "metadata": {},
    "source": [
-    "# Computing a LTAS with the Public API [^download]\n",
+    "# Computing multiple spectrograms with the Public API [^download]\n",
     "\n",
-    "[^download]: This notebook can be downloaded as **{nb-download}`example_ltas_public.ipynb`**."
+    "[^download]: This notebook can be downloaded as **{nb-download}`example_multiple_spectrograms_public.ipynb`**."
    ]
   },
   {
@@ -41,7 +41,9 @@
    "source": [
     "As always in the **Public API**, the first step is to **build the dataset**.\n",
     "\n",
-    "An `Instrument` can be provided to the `Dataset` for the WAV data to be converted in pressure units. This will lead the resulting spectra to be expressed in dB SPL (rather than in dB FS):"
+    "Since we don't know (nor we care about) the files begin timestamps, we'll set the `striptime_format` to `None`, which will assign a default timestamp at which the first valid audio file will be considered to start. Then, each next valid audio file will be considered as starting at the end of the previous one. This default timestamp can be editted thanks to the `first_file_begin` parameter.\n",
+    "\n",
+    "An `Instrument` can be provided to the `Dataset` for the WAV data to be converted in pressure units. This will lead the resulting spectra to be expressed in dB SPL (rather than in dB FS)."
    ]
   },
   {
@@ -55,15 +57,15 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "audio_folder = Path(r\"_static/sample_audio/timestamped\")\n",
+    "audio_folder = Path(r\"_static/sample_audio/id\")\n",
     "\n",
     "from osekit.public_api.dataset import Dataset\n",
     "from osekit.core_api.instrument import Instrument\n",
     "\n",
     "dataset = Dataset(\n",
     "    folder=audio_folder,\n",
-    "    strptime_format=\"%y%m%d_%H%M%S\",\n",
-    "    instrument=Instrument(end_to_end_db=150.0),\n",
+    "    strptime_format=None,\n",
+    "    instrument=Instrument(end_to_end_db=165.0),\n",
     ")\n",
     "\n",
     "dataset.build()"
@@ -121,11 +123,7 @@
     "\n",
     "sample_rate = 24_000\n",
     "\n",
-    "sft = ShortTimeFFT(\n",
-    "    win=hamming(1024),\n",
-    "    hop=128,  # This will be forced to len(win) if we compute a LTAS\n",
-    "    fs=sample_rate,\n",
-    ")"
+    "sft = ShortTimeFFT(win=hamming(1024), hop=128, fs=sample_rate)"
    ]
   },
   {
@@ -137,31 +135,81 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cc85bb1fe97f166",
-   "metadata": {},
+   "id": "b4c2c3857ffcb60f",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "from osekit.utils.audio_utils import Normalization\n",
     "from osekit.public_api.analysis import Analysis, AnalysisType\n",
+    "from osekit.utils.audio_utils import Normalization\n",
     "\n",
     "analysis = Analysis(\n",
-    "    analysis_type=AnalysisType.SPECTROGRAM\n",
-    "    | AnalysisType.MATRIX,  # we want to export both the spectrogram and the sx matrix\n",
-    "    nb_ltas_time_bins=3000,  # This will turn the regular spectrum computation in a LTAS\n",
+    "    AnalysisType.SPECTROGRAM,\n",
+    "    mode=\"files\",  # We want one spectrogram per file\n",
     "    sample_rate=sample_rate,\n",
-    "    normalization=Normalization.DC_REJECT,  # Removes the DC component\n",
+    "    normalization=Normalization.DC_REJECT,\n",
     "    fft=sft,\n",
     "    v_lim=(0.0, 150.0),  # Boundaries of the spectrograms\n",
     "    colormap=\"viridis\",  # Default value\n",
-    "    name=\"LTAS\",\n",
+    "    name=\"8s_long_spectros\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51c793d194a72485",
+   "metadata": {},
+   "source": [
+    "The **Core API** can still be used on top of the **Public API**.\n",
+    "\n",
+    "We'll access the Core API `SpectroDataset` that match this analysis to trim and rename the exported spectrograms:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7de8aed3d1c1328a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas import Timedelta\n",
+    "\n",
+    "spectro_dataset = dataset.get_analysis_spectrodataset(analysis)\n",
+    "\n",
+    "for sd in spectro_dataset.data:\n",
+    "    sd.name = next(iter(sd.audio_data.files)).path.stem\n",
+    "    sd.end = sd.begin + Timedelta(seconds=8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89a968c78117ceea",
+   "metadata": {},
+   "source": "We can also glance at the spectrogram results with the **Core API**:"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0f78e20ffe0a9e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, axs = plt.subplots(2, 1)\n",
+    "spectro_dataset.data[0].plot(ax=axs[1])\n",
+    "spectro_dataset.data[1].plot(ax=axs[0])\n",
+    "axs[0].get_xaxis().set_visible(False)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "b2950dc5d76d2bbe",
    "metadata": {},
-   "source": "Running the analysis will compute the LTAS and save the output files to disk."
+   "source": "Running the analysis while specifying the filtered ``audio_dataset`` will skip the empty `AudioData` (and thus the empty `SpectroData`)."
   },
   {
    "cell_type": "code",
@@ -172,14 +220,14 @@
    },
    "outputs": [],
    "source": [
-    "dataset.run_analysis(analysis=analysis)"
+    "dataset.run_analysis(analysis=analysis, spectro_dataset=spectro_dataset)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "8271f118422f38dc",
    "metadata": {},
-   "source": "As for regular spectrum analyses, the output LTAS is stored in a `SpectroDataset` named after `analysis.name`:"
+   "source": "All the new files from the analysis are stored in a `SpectroDataset` named after `analysis.name`:"
   },
   {
    "cell_type": "code",
@@ -191,12 +239,11 @@
     "pd.DataFrame(\n",
     "    [\n",
     "        {\n",
-    "            \"Exported file\": list(sd.files)[0].path.name,\n",
-    "            \"Begin\": sd.begin,\n",
-    "            \"End\": sd.end,\n",
-    "            \"Sample Rate\": sd.fft.fs,\n",
+    "            \"Exported file\": path.name,\n",
     "        }\n",
-    "        for sd in dataset.get_dataset(analysis.name).data\n",
+    "        for path in (\n",
+    "            audio_folder / \"processed\" / analysis.name / \"spectrogram\"\n",
+    "        ).iterdir()\n",
     "    ],\n",
     ").set_index(\"Exported file\")"
    ]
@@ -204,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e05d653bc1e8bfe2",
+   "id": "58b7aec2d8863a02",
    "metadata": {
     "tags": [
      "remove-cell"
