add remove_empty_data() examples in doc

--- a/docs/source/example_multiple_spectrograms_core.ipynb
+++ b/docs/source/example_multiple_spectrograms_core.ipynb
@@ -110,7 +110,7 @@
     ")\n",
     "\n",
     "# Remove the empty data by using the default AudioDataset constructor:\n",
-    "audio_dataset = AudioDataset([ad for ad in audio_dataset.data if not ad.is_empty])"
+    "audio_dataset.remove_empty_data(threshold=0.0)"
    ]
   },
   {
