--- a/docs/source/example_reshaping_multiple_files_core.ipynb
+++ b/docs/source/example_reshaping_multiple_files_core.ipynb
@@ -105,8 +105,8 @@
     "    f\"{'Nb of Empty data:':<30}{str(len([ad for ad in audio_dataset.data if ad.is_empty])):>30}\\n\"\n",
     ")\n",
     "\n",
-    "# Remove the empty data by using the default AudioDataset constructor:\n",
-    "audio_dataset = AudioDataset([ad for ad in audio_dataset.data if not ad.is_empty])"
+    "# Remove the empty data:\n",
+    "audio_dataset.remove_empty_data(threshold=0.0)"
    ]
   },
   {
