--- a/docs/source/example_reshaping_multiple_files_public.ipynb
+++ b/docs/source/example_reshaping_multiple_files_public.ipynb
@@ -150,7 +150,7 @@
     "audio_dataset = dataset.get_analysis_audiodataset(analysis=analysis)\n",
     "\n",
     "# Filter the returned AudioDataset\n",
-    "audio_dataset.data = [ad for ad in audio_dataset.data if not ad.is_empty]"
+    "audio_dataset.remove_empty_data(threshold=0.0)"
    ]
   },
   {
