add removed_data parsing in core multiple spectrograms doc

--- a/docs/source/example_multiple_spectrograms_core.ipynb
+++ b/docs/source/example_multiple_spectrograms_core.ipynb
@@ -106,11 +106,19 @@
    "source": [
     "print(f\"{' BEFORE FILTERING ':#^60}\")\n",
     "print(\n",
-    "    f\"{'Nb of Empty data:':<30}{str(len([ad for ad in audio_dataset.data if ad.is_empty])):>30}\\n\"\n",
+    "    f\"{'Nb of Empty data:':<30}{sum(1 for ad in audio_dataset.data if ad.is_empty):>30}\\n\"\n",
     ")\n",
     "\n",
-    "# Remove the empty data by using the default AudioDataset constructor:\n",
-    "audio_dataset.remove_empty_data(threshold=0.0)"
+    "# Remove the empty data:\n",
+    "removed_data = audio_dataset.remove_empty_data(threshold=0.0)\n",
+    "\n",
+    "# We can take a look at which data has been removed:\n",
+    "print(f\"{' REMOVED DATA ':#^60}\")\n",
+    "print(f\"{'Begin':<20}{'Duration':^20}{'Fill rate':>20}\")\n",
+    "for data in removed_data:\n",
+    "    print(\n",
+    "        f\"{data.begin.strftime('%H:%M:%S'):<20}{str(data.duration):^20}{str(data.populated_ratio) + ' %':>20}\"\n",
+    "    )"
    ]
   },
   {
