add removed_data parsing in public multiple spectrograms doc

--- a/docs/source/example_multiple_spectrograms_public.ipynb
+++ b/docs/source/example_multiple_spectrograms_public.ipynb
@@ -183,7 +183,15 @@
     "audio_dataset = dataset.get_analysis_audiodataset(analysis=analysis)\n",
     "\n",
     "# Filter the returned AudioDataset\n",
-    "audio_dataset.remove_empty_data(threshold=0.0)"
+    "removed_data = audio_dataset.remove_empty_data(threshold=0.0)\n",
+    "\n",
+    "# We can take a look at which data has been removed:\n",
+    "print(f\"{' REMOVED DATA ':#^60}\")\n",
+    "print(f\"{'Begin':<20}{'Duration':^20}{'Fill rate':>20}\")\n",
+    "for data in removed_data:\n",
+    "    print(\n",
+    "        f\"{data.begin.strftime('%H:%M:%S'):<20}{str(data.duration):^20}{str(data.populated_ratio) + ' %':>20}\"\n",
+    "    )"
    ]
   },
   {
